# texinfo

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  ChangeLog  ChangeLog.70  ChangeLog.72  ChangeLog.73  INSTALL  Makefile  Makefile-raw  Makefile.am  Makefile.in  NEWS  README  README-alpha  README-hacking  TODO  TODO.HTML  allkeys_bin.h  allkeys_bin2.h  allkeys_bin_loader.c  allkeys_bin_loader.h  allkeys_bin_loader2.c  allkeys_bin_loader2.h  allkeys_query.c  allkeys_to_binary.c  autogen.sh  collation_builder.c  collation_data_lookup.c  collation_key.c  collation_key.h  collation_test.c  collation_test.txt  configure.ac  gen-collation-table.c  grand-replace.sh  system.h  uN_make_key_streaming.inc  update-version.sh  (+2 more)
Pod-Simple-Texinfo/: Makefile.PL  Makefile.am  README  TODO  pod2texi.pl  prove.sh
Pod-Simple-Texinfo/manual_tests/: manual_sectioning_gap_test.sh  reference_modules_main.texi  reference_sectioning_gap.texi  test_empty_head2.sh  test_ref_to_unknown.sh
Pod-Simple-Texinfo/t/: Pod-Simple-Texinfo.t
Pod-Simple-Texinfo/test_scripts/: manual_sectioning_gap_test.sh  test_empty_head2.sh  test_ref_to_unknown.sh
Pod-Simple-Texinfo/tests/: reference_test_empty_head2.texi
UTS10/: .gitignore  Makefile.am  README_allkeys.md  README_binary.md  TODO  allkeys_bin.c  allkeys_bin.h  allkeys_bin_dumper.c  allkeys_bin_loader.c  allkeys_bin_loader.h  allkeys_query.c  allkeys_to_binary.c  collation-table.c  collation_data_loader.c  collation_data_loader.h  collation_data_lookup.c  collation_data_lookup.h  collation_key.c  collation_key.h  collation_test.c  gen-collation-table.c  utf8_to_sort_key.c
UTS10/gnulib/lib/: Makefile.am  fcntl.h  limits.h  locale.h  pthread.h  sched.h  stddef.h  stdlib.h  string.h  time.h  uchar.h  unictype.h  uninorm.h  unistd.h  unistr.h  unitypes.h  wchar.h  wctype.h
UTS10/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
UTS10/t/: collation-test-shifted.sh
doc/tp_api/: Makefile.am  texi2any_internals.texi
doc/tp_api/api_includes/: Texinfo-Common.texi  Texinfo-Convert-Converter.texi  Texinfo-Convert-NodeNameNormalization.texi  Texinfo-Convert-Text.texi  Texinfo-Convert-Unicode.texi  Texinfo-Convert-Utils.texi  Texinfo-Document.texi  Texinfo-Parser.texi  Texinfo-Structuring.texi  Texinfo-Translations.texi
texindex/: Makefile.am  README  texindex.awk  texindex.in  ti.texi  ti.twjr  unicode.awk
tp/Texinfo/TestXS/: Makefile.am  TestXS.pm  configure.ac
tp/Texinfo/XS/: Makefile.am  MiscXS.xs  TestXS.pm  TestXS.xs  XSParagraph.xs  configure.ac  misc.c  miscxs.h  texi2any.c  teximakehtml.c  xspara.c  xspara.h  xspara_text.c  xspara_text.h
tp/tests/contents/: Makefile.am  contents_and_parts.texi  list-of-tests
tp/tests/encoded/: Makefile.am  list-of-tests
tp/tests/indices/: Makefile.am  index_entries_relate_to_item.texi  list-of-tests
tta/: Makefile.am  README  TODO  configure.ac  defs.in  load_txi_modules.pl  prove.sh  texi2any.pl  texi2any.supp
tta/C/: Makefile.am  README  texi2any.c
tta/C/api_for_swig/: swig_element_types.h  swig_error_messages_types.h  swig_interface.c  swig_interface.h  swig_parser_api.c  swig_parser_api.h  swig_text_options.h
tta/C/convert/: build_html_perl_info.c  build_html_perl_info.h  build_html_perl_state.c  call_conversion_perl.c  call_conversion_perl.h  call_embed_perl.c  call_html_perl_function.c  call_html_perl_function.h  cmd_converter.c  convert_html.c  convert_html.h  convert_indices.c  convert_indices.h  converter.c  (+40 more)
tta/Texinfo/: HTMLData.pm  Indices.pm  ModulePath.pm.in  Parser.pm  StructTransfXS.pm  Structuring.pm  Transformations.pm  XSLoader.pm  options_data.txt
tta/data/: command_data.txt  command_text.txt  commands_values.txt  converters_defaults.txt  default_css_element_class_styles.csv  default_direction_strings.csv  default_special_unit_info.csv  options_data.txt
tta/ext/: epub3.pm  latex2html.pm
tta/m4/: ax_python_devel.m4  txi_embedded_perl.m4  txi_iconv_converts_euc_cn.m4  txi_libperl_link.m4  txi_perl_conf.m4
tta/maintain/: all_tests.sh  catalog.xml.in  change_perl_modules_version.sh  check_back_xml_forth_texi_t.sh  check_epubcheck_texi_t.sh  copy_change_file_name_encoding.pl  generate_code_commands_text.pl  generate_code_commands_values.pl  generate_code_convert_data.pl  generate_css_data.pl  generate_many_input_files_native_tests.sh  regenerate_C_options_info.pl  regenerate_cmd_tests.sh  regenerate_commands_perl_info.pl  regenerate_converters_documentation.sh  regenerate_docstr.sh  regenerate_documentlanguages-iana.pl  regenerate_documentlanguages-loc.pl  regenerate_file_lists.pl  regenerate_non_ascii_tar_file.sh  regenerate_perl_options_info.pl  setup_accent_tables.pl  setup_converters_code_tables.pl
tta/perl/: Convert_format_template.pod  Makefile.am  Makefile.tres  load_txi_modules.pl  prove.sh  texi2any.pl
tta/swig/: Makefile.am  README  TODO  configure.ac  texinfo.i  tree_element.c
tta/t/: 02coverage.t  03coverage_braces.t  04verb.t  05paragraph.t  06columnfractions.t  08misc_commands.t  09indices.t  10menu.t  16raw.t  181quotation.t  18itemize.t  19def.t  20preformatted.t  21multitable.t  25regions.t  27float.t  28heading.t  30sectioning.t  40moresectioning.t  50value.t  55conditionals.t  57invalid_nestings.t  58alias.t  60macro.t  65linemacro.t  70value_and_macro.t  80include.t  README  converters_tests.t  docbook_tests.t  epub_tests.t  formats_encodings.t  html_tests.t  htmlxref.t  info_tests.t  init_files_tests.t  languages.t  latex_tests.t  layout.t  plaintext_tests.t  (+3 more)
tta/tests/: Makefile.am  Makefile.onetst  README  coverage_macro.texi  escape_file_names.pl  parser_tests.sh  run_parser_all.sh
util/: Makefile.am  README  detexinfo  dir-example  htmlxref.cnf  pdftexi2dvi  srclist-txi  srclist.txt  texi-elements-by-size  texi2dvi  texi2pdf  texindex.bat  texinfo.dtd  txicmdlist  txicustomvars  txixml2texi.pl
util/htmlxref.d/: Texinfo_GNU.cnf  Texinfo_nonGNU.cnf
util/info-hooks/: gnu-manuals-locations  manual-not-found
util/swig/: Makefile.am  README  TODO  autogen.sh  build.sh  configure.ac  test_Texinfo.py  texinfo.i  tree_element.c  tree_element.h
(+9934 files in other folders)
